--- a/DebugWindow/DebugWindow/Base.lproj/Main.storyboard
+++ b/DebugWindow/DebugWindow/Base.lproj/Main.storyboard
@@ -30,14 +30,27 @@ Use 3 finger swipe gesture  (swipe from left to right) to reveal debug window</s
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7a3-6b-jgP">
+                                <rect key="frame" x="143" y="213" width="88" height="30"/>
+                                <state key="normal" title="Reveal Menu"/>
+                                <connections>
+                                    <action selector="revealAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="2ks-cr-mHX"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="7a3-6b-jgP" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="143" id="YFx-Jf-yoJ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="7a3-6b-jgP" secondAttribute="trailing" constant="144" id="dvF-TB-w6q"/>
                             <constraint firstItem="lZa-zD-NIk" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="klv-cI-FTU"/>
+                            <constraint firstItem="7a3-6b-jgP" firstAttribute="top" secondItem="lZa-zD-NIk" secondAttribute="bottom" constant="8" id="rEG-nJ-eOk"/>
                             <constraint firstItem="lZa-zD-NIk" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="xfZ-5v-j59"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="revealMenuButton" destination="7a3-6b-jgP" id="nIZ-of-EqQ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
