--- a/DebugWindow/DebugWindow/TestViewController/TestViewController.xib
+++ b/DebugWindow/DebugWindow/TestViewController/TestViewController.xib
@@ -26,10 +26,19 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IAZ-Yf-gVP">
+                    <rect key="frame" x="172.5" y="277" width="30" height="30"/>
+                    <state key="normal" title="Test"/>
+                    <connections>
+                        <action selector="testAction:" destination="-1" eventType="touchUpInside" id="9sY-wJ-GHM"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="IAZ-Yf-gVP" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="619-Jn-fdP"/>
                 <constraint firstItem="IVd-uA-NQP" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="WPR-E5-Fqw"/>
+                <constraint firstItem="IAZ-Yf-gVP" firstAttribute="top" secondItem="IVd-uA-NQP" secondAttribute="bottom" constant="19" id="eqc-fL-BXZ"/>
                 <constraint firstItem="IVd-uA-NQP" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="217" id="iws-00-TI1"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
