--- a/DebugWindow/DebugWindow/Core/LocalizationModule/DWLocalizationDebug.storyboard
+++ b/DebugWindow/DebugWindow/Core/LocalizationModule/DWLocalizationDebug.storyboard
@@ -17,33 +17,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
-                        <view key="tableFooterView" contentMode="scaleToFill" id="AxL-M6-yoL" userLabel="FooterView">
-                            <rect key="frame" x="0.0" y="205.5" width="375" height="44"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BUe-xo-aU0">
-                                    <rect key="frame" x="8" y="6" width="359" height="30"/>
-                                    <state key="normal" title="Switch Localization"/>
-                                </button>
-                            </subviews>
-                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <constraints>
-                                <constraint firstAttribute="trailing" secondItem="BUe-xo-aU0" secondAttribute="trailing" constant="8" id="Jx5-9p-MQ2"/>
-                                <constraint firstItem="BUe-xo-aU0" firstAttribute="top" secondItem="AxL-M6-yoL" secondAttribute="top" constant="6" id="Ucc-8B-MxF"/>
-                                <constraint firstItem="BUe-xo-aU0" firstAttribute="leading" secondItem="AxL-M6-yoL" secondAttribute="leading" constant="8" id="jsf-ed-j4J"/>
-                            </constraints>
-                        </view>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PseudolocalizedIdentifier" textLabel="aY2-8G-Auc" detailTextLabel="pwN-mC-MQO" style="IBUITableViewCellStyleSubtitle" id="7NS-OY-NYL">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="checkmark" indentationWidth="10" reuseIdentifier="PseudolocalizedIdentifier" textLabel="aY2-8G-Auc" detailTextLabel="pwN-mC-MQO" style="IBUITableViewCellStyleSubtitle" id="7NS-OY-NYL">
                                 <rect key="frame" x="0.0" y="55.5" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="7NS-OY-NYL" id="grc-H7-aBe">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="335" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Hcp-Jy-Srq">
-                                            <rect key="frame" x="312" y="6.5" width="51" height="30.5"/>
-                                        </switch>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Pseudolocalized" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="aY2-8G-Auc">
                                             <rect key="frame" x="16" y="5" width="124.5" height="20.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
@@ -59,23 +40,15 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
-                                    <constraints>
-                                        <constraint firstAttribute="bottomMargin" secondItem="Hcp-Jy-Srq" secondAttribute="bottom" constant="-4" id="N2t-tJ-WjA"/>
-                                        <constraint firstItem="Hcp-Jy-Srq" firstAttribute="centerY" secondItem="grc-H7-aBe" secondAttribute="centerY" id="jVd-dz-twL"/>
-                                        <constraint firstItem="Hcp-Jy-Srq" firstAttribute="leading" secondItem="pwN-mC-MQO" secondAttribute="trailing" constant="38" id="olf-IV-ISF"/>
-                                    </constraints>
                                 </tableViewCellContentView>
                             </tableViewCell>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PseudolocalizedRTLIdentifier" textLabel="HlV-ha-el3" detailTextLabel="eb5-dN-afS" style="IBUITableViewCellStyleSubtitle" id="acA-Ea-CVh">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="checkmark" indentationWidth="10" reuseIdentifier="PseudolocalizedRTLIdentifier" textLabel="HlV-ha-el3" detailTextLabel="eb5-dN-afS" style="IBUITableViewCellStyleSubtitle" id="acA-Ea-CVh">
                                 <rect key="frame" x="0.0" y="99.5" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="acA-Ea-CVh" id="YAe-f7-nqC">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="335" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Cyp-f4-dCX">
-                                            <rect key="frame" x="312" y="6.5" width="51" height="30.5"/>
-                                        </switch>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Pseudolocalized RTL" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="HlV-ha-el3">
                                             <rect key="frame" x="16" y="5" width="159.5" height="20.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
@@ -91,11 +64,6 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
-                                    <constraints>
-                                        <constraint firstItem="Cyp-f4-dCX" firstAttribute="leading" secondItem="eb5-dN-afS" secondAttribute="trailing" constant="26" id="324-oQ-RPe"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="Cyp-f4-dCX" secondAttribute="bottom" constant="-4" id="9YN-Vw-khU"/>
-                                        <constraint firstItem="Cyp-f4-dCX" firstAttribute="centerY" secondItem="YAe-f7-nqC" secondAttribute="centerY" id="z7W-K4-Zb2"/>
-                                    </constraints>
                                 </tableViewCellContentView>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="DWHumanLanguageIdentifier" textLabel="GZu-RL-mfa" detailTextLabel="wEo-G3-jBa" style="IBUITableViewCellStyleSubtitle" id="fDa-lb-Nre">
